# mongo-pg-export

./: .gitignore  README.md  load_csv_psgresSql.py  main.py  mongo_conv_csv.py  pyproject.toml
.github/workflows/: python-app.yml
tests/: test_pipeline.py
